--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
 spring.datasource.url=jdbc:mysql://localhost:3306/gym
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=root
+spring.datasource.password=
 server.port=8081
 ## Hibernate Properties
 
@@ -13,3 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 
 spring.jpa.hibernate.ddl-auto=update
+
+#jsp
+spring.mvc.view.prefix: /WEB-INF/jsp/
+spring.mvc.view.suffix: .jsp
