--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 
 spring.jpa.hibernate.ddl-auto=update
+# Para el error de "not found serializer"
+spring.jackson.serialization.fail-on-empty-beans=false
 
 #jsp
 spring.mvc.view.prefix: /WEB-INF/jsp/
