--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
-spring.datasource.url=jdbc:mysql://localhost:3306/gym
+spring.datasource.url=jdbc:mysql://localhost:3306/gym?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 server.port=8081
