--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/gym?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=
-server.port=8081
+spring.datasource.password=Aanectarine$marioluisasd7
+server.port=8080
 ## Hibernate Properties
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -19,3 +19,6 @@ spring.jackson.serialization.fail-on-empty-beans=false
 #jsp
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
+
+#OPTIONS method available
+#spring.mvc.dispatch-options-request=true
