--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/gym?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=secure392
 server.port=8080
 ## Hibernate Properties
 
