Implementado HATEOAS en controladores

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,13 @@
             <artifactId>spring-core</artifactId>
             <version>5.1.4.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.hateoas/spring-hateoas -->
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+            <version>0.25.1.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
