--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/gym?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=secure392
-server.port=8080
+spring.datasource.password=
+server.port=8081
 ## Hibernate Properties
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
